--- a/task_manager/tasks/templates/tasks/base.html
+++ b/task_manager/tasks/templates/tasks/base.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="d-flex flex-column h-100">
-    <header class="mb-3">
+    <header>
         <nav class="navbar navbar-expand-md navbar-dark bg-dark">
             <a class="navbar-brand" href="#">Fixed navbar</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
