--- a/task_manager/tasks/templates/tasks/base.html
+++ b/task_manager/tasks/templates/tasks/base.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="d-flex flex-column h-100">
-    <header>
+    <header class="mb-4">
         <nav class="navbar navbar-expand-md navbar-dark bg-dark">
             <a class="navbar-brand" href="#">Fixed navbar</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
@@ -30,12 +30,24 @@
                         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
                     </li>
                 </ul>
+                <ul class="navbar-nav">
+                    {% if user.is_authenticated %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'users:logout' %}">Logout</a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'users:login' %}">Login</a>
+                        </li>
+                    {% endif %}
+                </ul>
             </div>
         </nav>
     </header>
 
     <main role="main" class="flex-shrink-0">
         <div class="container">
+            {% bootstrap_messages %}
             {% block content %}{% endblock %}
         </div>
     </main>
