--- a/task_manager/users/templates/users/login.html
+++ b/task_manager/users/templates/users/login.html
@@ -2,15 +2,11 @@
 {% load bootstrap4 %}
 
 {% block content %}
-    <h1 class="my-3">Log in</h1>
+    <h1 class="mb-4">Log in</h1>
 
     <form method="POST" action="{% url 'users:login' %}">
         {% csrf_token %}
-        <fieldset class="form-group">
-            {% bootstrap_form form %}
-        </fieldset>
-        <div class="form-group">
-            <button class="btn btn-outline-info" type="submit">Log in</button>
-        </div>
+        {% bootstrap_form form %}
+        <button class="btn btn-outline-info" type="submit">Log in</button>
     </form>
 {% endblock content %}
