--- a/task_manager/tasks/templates/tasks/base.html
+++ b/task_manager/tasks/templates/tasks/base.html
@@ -39,6 +39,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'users:login' %}">Login</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'users:register' %}">Register</a>
+                        </li>
                     {% endif %}
                 </ul>
             </div>
