--- a/task_manager/tasks/templates/tasks/base.html
+++ b/task_manager/tasks/templates/tasks/base.html
@@ -13,7 +13,7 @@
 <body class="d-flex flex-column h-100">
     <header class="mb-4">
         <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">Fixed navbar</a>
+            <a class="navbar-brand" href="{% url 'tasks:index' %}">Task Manager</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
