--- a/task_manager/users/templates/users/register.html
+++ b/task_manager/users/templates/users/register.html
@@ -1,12 +1,15 @@
 {% extends 'tasks/base.html' %}
+{% load i18n %}
 {% load bootstrap4 %}
 
 {% block content %}
-    <h1 class="mb-4">Sign up</h1>
+    <h1 class="mb-3">{% translate "Registration" %}</h1>
 
     <form method="POST" action="{% url 'users:register' %}">
         {% csrf_token %}
         {% bootstrap_form form %}
-        <button class="btn btn-outline-info" type="submit">Sign up</button>
+        <div class="form-group">
+            <input class="btn btn-primary" type="submit" value="{% translate 'Register' %}">
+        </div>
     </form>
 {% endblock content %}
