--- a/task_manager/tasks/templates/tasks/base.html
+++ b/task_manager/tasks/templates/tasks/base.html
@@ -1,46 +1,42 @@
+{% load i18n %}
 {% load bootstrap4 %}
 
-<html lang="en" class="h-100">
+<html lang="ru">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Task Manager</title>
+    <title>{% translate "Task Manager" %}</title>
 
     {% bootstrap_css %}
 </head>
 
-<body class="d-flex flex-column h-100">
-    <header class="mb-4">
+<body>
+    <header class="mb-3">
         <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-            <a class="navbar-brand" href="{% url 'tasks:index' %}">Task Manager</a>
+            <a class="navbar-brand" href="{% url 'tasks:index' %}">{% translate "Task Manager" %}</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                    </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                        <a class="nav-link" href="#">{% translate "Users" %}</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav">
                     {% if user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'users:logout' %}">Logout</a>
+                            <!--Should this a post form instead of just a link?-->
+                            <a class="nav-link" href="{% url 'users:logout' %}">{% translate "Logout" %}</a>
                         </li>
                     {% else %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'users:login' %}">Login</a>
+                            <a class="nav-link" href="{% url 'users:login' %}">{% translate "Login" %}</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'users:register' %}">Register</a>
+                            <a class="nav-link" href="{% url 'users:register' %}">{% translate "Registration" %}</a>
                         </li>
                     {% endif %}
                 </ul>
@@ -48,18 +44,12 @@
         </nav>
     </header>
 
-    <main role="main" class="flex-shrink-0">
+    <main role="main">
         <div class="container">
             {% bootstrap_messages %}
             {% block content %}{% endblock %}
         </div>
     </main>
-
-    <footer class="footer mt-auto py-3">
-        <div class="container">
-            <span class="text-muted">Place sticky footer content here.</span>
-        </div>
-    </footer>
 
     {% bootstrap_javascript jquery='full' %}
 </body>
