--- a/task_manager/users/templates/users/create.html
+++ b/task_manager/users/templates/users/create.html
@@ -5,7 +5,7 @@
 {% block content %}
     <h1 class="mb-3">{% translate "Registration" %}</h1>
 
-    <form method="POST" action="{% url 'users:register' %}">
+    <form method="POST" action="{% url 'users:create' %}">
         {% csrf_token %}
         {% bootstrap_form form %}
         <div class="form-group">
