--- a/task_manager/users/templates/users/index.html
+++ b/task_manager/users/templates/users/index.html
@@ -23,7 +23,7 @@
                     <td>{{ user.get_full_name }}</td>
                     <td>{{ user.date_joined }}</td>
                     <td>
-                        <a href="#">{% translate "Change" %}</a>
+                        <a href="{% url 'users:update' user.id %}">{% translate "Change" %}</a>
                         <br>
                         <a href="#">{% translate "Delete" %}</a>
                     </td>
