--- a/task_manager/pages/templates/pages/base.html
+++ b/task_manager/pages/templates/pages/base.html
@@ -14,7 +14,7 @@
 <body>
     <header class="mb-3">
         <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-            <a class="navbar-brand" href="{% url 'tasks:index' %}">{% translate "Task Manager" %}</a>
+            <a class="navbar-brand" href="{% url 'pages:home' %}">{% translate "Task Manager" %}</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
