--- a/task_manager/users/templates/users/login.html
+++ b/task_manager/users/templates/users/login.html
@@ -8,6 +8,7 @@
     <form method="POST" action="{% url 'users:login' %}">
         {% csrf_token %}
         {% bootstrap_form form %}
+        <input type="hidden" name="next" value="{{ next }}">
         <div class="form-group">
             <input class="btn btn-primary" type="submit" value="{% translate 'Log in' %}">
         </div>
