--- a/task_manager/pages/templates/pages/base.html
+++ b/task_manager/pages/templates/pages/base.html
@@ -24,6 +24,11 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'users:index' %}">{% translate "Users" %}</a>
                     </li>
+                    {% if user.is_authenticated %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'statuses:index' %}">{% translate "Statuses" %}</a>
+                        </li>
+                    {% endif %}
                 </ul>
                 <ul class="navbar-nav">
                     {% if user.is_authenticated %}
