add status create view

--- a/task_manager/statuses/templates/statuses/index.html
+++ b/task_manager/statuses/templates/statuses/index.html
@@ -4,6 +4,7 @@
 
 {% block content %}
     <h1 class="mb-3">{% translate "Statuses" %}</h1>
+    <a class="btn btn-sm btn-primary mb-3" href="{% url 'statuses:create' %}">{% translate "Create status" %}</a>
 
     <table class="table table-striped">
         <thead>
