--- a/task_manager/users/templates/users/index.html
+++ b/task_manager/users/templates/users/index.html
@@ -10,7 +10,7 @@
             <tr>
                 <th scope="col">{% translate "ID" %}</th>
                 <th scope="col">{% translate "Username" %}</th>
-                <th scope="col">{% translate "Fullname" %}</th></th>
+                <th scope="col">{% translate "Fullname" %}</th>
                 <th scope="col">{% translate "Created at" %}</th>
                 <th scope="col"></th>
             </tr>
@@ -23,7 +23,7 @@
                     <td>{{ user.get_full_name }}</td>
                     <td>{{ user.date_joined }}</td>
                     <td>
-                        <a href="{% url 'users:update' user.id %}">{% translate "Change" %}</a>
+                        <a href="{% url 'users:update' user.id %}">{% translate "Update" %}</a>
                         <br>
                         <a href="{% url 'users:delete' user.id %}">{% translate "Delete" %}</a>
                     </td>
