--- a/task_manager/pages/templates/pages/base.html
+++ b/task_manager/pages/templates/pages/base.html
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'statuses:index' %}">{% translate "Statuses" %}</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'tasks:index' %}">{% translate "Tasks" %}</a>
+                        </li>
                     {% endif %}
                 </ul>
                 <ul class="navbar-nav">
