add create view for tasks

--- a/task_manager/tasks/templates/tasks/index.html
+++ b/task_manager/tasks/templates/tasks/index.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <h1 class="mb-3">{% translate "Tasks" %}</h1>
-    <a class="btn btn-sm btn-primary mb-3" href="#">{% translate "Create task" %}</a>
+    <a class="btn btn-sm btn-primary mb-3" href="{% url 'tasks:create' %}">{% translate "Create task" %}</a>
 
     <table class="table table-striped">
         <thead>
@@ -13,7 +13,7 @@
                 <th scope="col">{% translate "Status" %}</th>
                 <th scope="col">{% translate "Name" %}</th>
                 <th scope="col">{% translate "Author" %}</th>
-                <th scope="col">{% translate "Assigned user" %}</th>
+                <th scope="col">{% translate "Executor" %}</th>
                 <th scope="col">{% translate "Created at" %}</th>
                 <th scope="col"></th>
             </tr>
@@ -25,7 +25,7 @@
                     <td>{{ task.status.name }}</td>
                     <td>{{ task.name }}</td>
                     <td>{{ task.author.get_full_name }}</td>
-                    <td>{{ task.assigned_user.get_full_name }}</td>
+                    <td>{{ task.executor.get_full_name }}</td>
                     <td>{{ task.created_at }}</td>
                     <td>
                         <a href="#">{% translate "Update" %}</a>
