--- a/task_manager/pages/templates/pages/base.html
+++ b/task_manager/pages/templates/pages/base.html
@@ -29,6 +29,9 @@
                             <a class="nav-link" href="{% url 'statuses:index' %}">{% translate "Statuses" %}</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="{% url 'labels:index' %}">{% translate "Labels" %}</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="{% url 'tasks:index' %}">{% translate "Tasks" %}</a>
                         </li>
                     {% endif %}
