add label delete view

--- a/task_manager/labels/templates/labels/index.html
+++ b/task_manager/labels/templates/labels/index.html
@@ -24,7 +24,7 @@
                     <td>
                         <a href="{% url 'labels:update' pk=label.pk %}">{% translate "Update" %}</a>
                         <br>
-                        <a href="#">{% translate "Delete" %}</a>
+                        <a href="{% url 'labels:delete' pk=label.pk %}">{% translate "Delete" %}</a>
                     </td>
                 </tr>
             {% endfor %}
