add labels to task form

--- a/task_manager/tasks/templates/tasks/detail.html
+++ b/task_manager/tasks/templates/tasks/detail.html
@@ -29,6 +29,16 @@
                     <div class="col">{{ task.created_at }}</div>
                 </div>
                 <div class="row p-1">
+                    <div class="col">{% translate "Labels" %}</div>
+                    <div class="col">
+                        <ul>
+                            {% for label in task.labels.all %}
+                                <li>{{ label.name }}</li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                </div>
+                <div class="row p-1">
                     <div class="col">
                         <a href="{% url 'tasks:update' pk=task.pk %}">{% translate "Update" %}</a>
                         <br>
