--- a/task_manager/tasks/templates/tasks/index.html
+++ b/task_manager/tasks/templates/tasks/index.html
@@ -5,7 +5,17 @@
 {% block content %}
     <h1 class="mb-4">{% translate "Tasks" %}</h1>
     <a class="btn btn-sm btn-primary mb-2" href="{% url 'tasks:create' %}">{% translate "Create task" %}</a>
-
+    <div class="card mb-2">
+        <div class="card-body bg-light">
+            <form class="form-inline" method="GET" action="{% url 'tasks:index' %}">
+                {% bootstrap_field filter.form.status field_class="ml-2 mr-3" %}
+                {% bootstrap_field filter.form.executor field_class="ml-2 mr-3" %}
+                {% bootstrap_field filter.form.label field_class="ml-2 mr-3" %}
+                {% bootstrap_field filter.form.self_tasks field_class="mr-3" %}
+                <input class="btn btn-primary" type="submit" value="{% translate 'Show' %}">
+            </form>
+        </div>
+    </div>
     <table class="table table-striped">
         <thead>
             <tr>
